--- a/.github/workflows/deploy-workflows.yml
+++ b/.github/workflows/deploy-workflows.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: "pablomarelli/${{ matrix.project }}"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPOS_TOKEN }}
           path: project
 
       - name: Insert Workflows
