Add workflow dispatch.

--- a/.github/workflows/deploy-workflows.yml
+++ b/.github/workflows/deploy-workflows.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - workflows/*
       - .github/workflows/deploy-workflows.yml
+  workflow_dispatch:
 
 jobs:
   insert-workflows:
